k8s/deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: etl-nginx
  labels:
    app: etl-nginx
    version: v0.1.0
    role: service
    layer: frontend    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etl-nginx
  template:
    metadata:
      labels:
        app: etl-nginx
    spec:
      volumes:
        - name: nginx-conf-volume
          configMap:
            name: nginx-conf
      containers:
        - name: nginx-unprivileged
          image: nginxinc/nginx-unprivileged:1.18
          securityContext:  
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          resources:
            limits:
              cpu: 512m
              memory: 256Mi
            requests:
              cpu: 256m
              memory: 128Mi
          volumeMounts:
            - mountPath:  /etc/nginx/conf.d/default.conf
              subPath: default.conf
              name:  nginx-conf-volume
            - mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              name: nginx-conf-volume
          ports:
          - containerPort: 80   
            name: etl-nginx
          readinessProbe: 
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe: 
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 60
