k8s/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etl-nginx-service
spec:
  selector:
    app: etl-nginx
  ports:
    - name: etl-nginx
      port: 80
      targetPort: 8080
