k8s/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing      
  name: etl-nginx-ingress
spec:
  rules:
  - host: etlforma.XXXXX.northeurope.aksapp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: etl-nginx-service
          servicePort: 80
